--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -58,3 +58,13 @@
     transition:0.3s;
     transform:scale(1.1);
 }
+@media(max-width:768px){
+    .footer{
+        margin:50px 70px;
+    }
+    .footer-bottom{
+        display:flex;
+        flex-direction:column-reverse;
+        margin-bottom:50px;
+    }
+}
